# strawberry-django-optimizer-infinite-recursion-mre

./: README.md  db.sqlite3  pyproject.toml
colors/: admin.py  models.py  types.py
colors/migrations/: 0001_initial.py
fruits/: admin.py  models.py  types.py
fruits/migrations/: 0001_initial.py  0002_alter_fruit_color_delete_color.py  0003_alter_fruit_options_fruit_order.py
mysite/: schema.py  settings.py  urls.py
